Fix spacing

--- a/doc/assets/scss/docs.scss
+++ b/doc/assets/scss/docs.scss
@@ -850,6 +850,11 @@ what you get
 
 .whatis {
   margin-top: 10px;
+  @media only screen and (min-width: 0) and (max-width: 64.063em) {
+    img {
+      margin-bottom: 15px;
+    }
+  }
 }
 
 .setting_sass {
